fix spacing through css

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -69,6 +69,10 @@ body {
     font-size: inherit;
 }
 
+.accordion .btn {
+  white-space: normal;
+}
+
 .accordion-item {
     border: 1px solid rgba(35, 65, 100, .15)
 }
@@ -87,10 +91,33 @@ body {
     box-shadow: inherit;
 }
 
+
+.mb-3 {
+    margin-bottom: 2rem!important;
+}
+
+.m-2 {
+    margin-top: 3rem!important;
+}
+
+#patient-prescriptions{
+    margin-bottom: 2rem;
+}
+
+.h2, h2 {
+    font-size: 1rem;
+}
+
+@media (min-width: 1200px)
+.h2, h2 {
+    font-size: 1rem;
+}
+
 @media (max-width: 767px) {
     .accordion-body h3 {
         font-size: calc(.95rem + 1.5vw);
     }
 }
+
 
 
